２章テキスト仮

--- a/tyranoscript_v514b/studio_config.json
+++ b/tyranoscript_v514b/studio_config.json
@@ -1,1 +1,1 @@
-{"project_dir":"","view":{"checkDebugPreview":{"type":"checkbox","val":true},"selectDebugPos":{"type":"select","val":"right"}},"map_watch":{},"pobj":{"path":"/Users/e205707/Desktop/ティラノ作成/tyranoscript_v514b","project_id":"tyranoproject","title":"ティラノスクリプト","type":"tyrano"},"rules":[]}
+{"project_dir":"","view":{"checkDebugPreview":{"type":"checkbox","val":true},"selectDebugPos":{"type":"select","val":"right"}},"map_watch":{},"pobj":{"path":"/Users/e205753/DoGame/make-Do-game/tyranoscript_v514b","project_id":"tyranoproject","title":"ティラノスクリプト","type":"tyrano"},"rules":[]}
